# BTC2nd-10

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: -todolist-----------frontend---backend.md
Avalanche/: package-lock.json  package.json
Avalanche/public/javascripts/: create_wallet.js  index.js
Avalanche/public/stylesheets/: create_wallet.css  style.css
Avalanche/routes/: index.js
Avalanche/views/: create_wallet.ejs  index.ejs
backend/: block_height  build.sh  index.js  package-lock.json  package.json  run.sh  utils.js
mid_server/: Cargo.toml  Dockerfile  builder.sh  run.sh
mid_server/src/: lib.rs  main.rs
mid_server/src/bins/: main.rs
mid_server/src/endpoints/: endpoint.rs
mid_server/src/envs/: env.rs
mid_server/src/indexer/: actor.rs
mid_server/src/models/: message.rs
mid_server/src/user/: actor.rs
wallet/: Dockerfile  build.sh  handler.js  index.js  package-lock.json  package.json  run.sh
wallet/router/: index.js  midle.js
