[package]
name = "mid_server"
version = "1.0.0"
authors = ["ben <sanghyun@kth.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio-util = { version = "0.6.7", features = ["codec"] }
reqwest = { version = "0.11.10", features = ["json"] }
log = '0.4.11'
env_logger = "0.9.0"
lazy_static = "1.4.0"   

[lib]
name = "mid_server"
path = "src/lib.rs"

[[bin]]
name = "mid_server"
path = "src/bins/main.rs"

[profile.release]
debug = true